--- a/app/src/main/res/layout/fragment_create_user.xml
+++ b/app/src/main/res/layout/fragment_create_user.xml
@@ -2,11 +2,21 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".login.LoginFragment"
-        android:id="@+id/frameLayout">
+        android:layout_height="match_parent">
+
+    <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:id="@+id/email"
+            android:layout_marginTop="8dp"
+            android:hint="@string/email"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     <EditText
             android:hint="@string/username"
@@ -16,9 +26,10 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             android:inputType="text"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"/>
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/email"/>
 
     <EditText
             android:hint="@string/password"
@@ -33,23 +44,13 @@
             android:layout_marginEnd="8dp"/>
 
     <Button
-            android:text="@string/sign_in"
+            android:text="@string/create_user"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/signIn"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
+            android:id="@+id/createUser"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/password"/>
-
-    <Button
-            android:text="@string/sign_up"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/signUp"
+            app:layout_constraintTop_toBottomOf="@+id/password"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/signIn"/>
+            android:layout_marginEnd="8dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
