--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
             android:id="@+id/storeFragment"
-            android:name="org.ghostinthesuhi.android.efficio.StoreFragment"
+            android:name="org.ghostinthesuhi.android.efficio.main.StoreFragment"
             android:label="@string/store"
             tools:layout="@layout/fragment_store">
         <action
@@ -19,12 +19,12 @@
     </fragment>
     <fragment
             android:id="@+id/editItemFragment"
-            android:name="org.ghostinthesuhi.android.efficio.EditItemFragment"
+            android:name="org.ghostinthesuhi.android.efficio.main.EditItemFragment"
             android:label="fragment_edit_item"
             tools:layout="@layout/fragment_edit_item"/>
     <fragment
             android:id="@+id/settingsFragment"
-            android:name="org.ghostinthesuhi.android.efficio.SettingsFragment"
+            android:name="org.ghostinthesuhi.android.efficio.main.SettingsFragment"
             android:label="@string/settings"
             tools:layout="@layout/fragment_settings"/>
 </navigation>
