--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -26,5 +26,9 @@
         <item
                 android:id="@+id/settings"
                 android:title="@string/settings"/>
+
+        <item
+            android:id="@+id/log_out"
+            android:title="@string/log_out"/>
     </group>
 </menu>
