--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -16,6 +16,13 @@
         <action
             android:id="@+id/action_storeFragment_to_settingsFragment"
             app:destination="@id/settingsFragment" />
+        <action
+            android:id="@+id/action_storeFragment_to_createStoreFragment"
+            app:destination="@id/create_store_fragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/editItemFragment"
@@ -27,4 +34,8 @@
         android:name="org.ghostinthesuhi.android.efficio.main.SettingsFragment"
         android:label="@string/settings"
         tools:layout="@layout/fragment_settings" />
+    <fragment
+        android:id="@+id/create_store_fragment"
+        android:name="org.ghostinthesuhi.android.efficio.main.CreateStoreFragment"
+        android:label="@string/create_new_store" />
 </navigation>
