--- a/app/src/main/res/layout/fragment_create_store.xml
+++ b/app/src/main/res/layout/fragment_create_store.xml
@@ -10,10 +10,10 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/store_name"
+            android:id="@+id/storeName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/store_name"
-            android:inputType="text" />
+            android:inputType="textCapSentences" />
     </com.google.android.material.textfield.TextInputLayout>
 </LinearLayout>
